style: ios overflow fix

--- a/global.css
+++ b/global.css
@@ -2,10 +2,16 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  margin: 0;
+  position: relative;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
+}
+
+body {
+  margin: 0;
   background-color: black;
   font-display: swap;
 }
