--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,6 @@
 .app {
   height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
